--- a/desktop1.html
+++ b/desktop1.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./desktop1.css" />
+    <link rel="icon" type="image/svg+xml" href="/public/Logo fat burguer.jpeg.jpeg" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Open Sans:ital,wght@0,400;0,700;1,400&display=swap"
@@ -26,12 +27,13 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
     />
+    <title>Fat Burger</title>
   </head>
   <body>
     <div class="desktop-2">
       <header class="frame-parent">
         <div class="parent">
-          <img class="icon2" alt="" src="./public/20240713-222412-1@2x.png" />
+          <img class="icon2" alt="" src="./public/header-background@2x.png" />
 
           <img
             class="ellipse-icon"
@@ -42,7 +44,7 @@
         </div>
         <div class="rectangle-parent1" style="display: inline-block; position: relative; width: 150px; height: 40px;">
           <a href="index.html" style="display: block; width: 100%; height: 100%; text-decoration: none; color: inherit;">
-            <div class="frame-child1" id="rectangle" style="background-color: #FFD700; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; position: relative;">
+            <div class="frame-child1" id="rectangle" style="background-color: #F7C334; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; position: relative;">
               <span class="inicio1" style="color: white; font-weight: 600; font-size: 14px; position: absolute; z-index: 1;">INICIO</span>
             </div>
           </a>
@@ -144,7 +146,7 @@
                         class="f7c334-6-21"
                         loading="lazy"
                         alt=""
-                        src="./public/f7c334-6-2-1@2x.png"
+                        src="./public/f7c334-6-2@2x.png"
                       />
                     </div>
                   </div>
@@ -186,7 +188,7 @@
                         class="f7c334-6-22"
                         loading="lazy"
                         alt=""
-                        src="./public/f7c334-6-2-2@2x.png"
+                        src="./public/f7c334-6-2@2x.png"
                       />
                     </div>
                   </div>
@@ -229,7 +231,7 @@
                                 class="f7c334-6-23"
                                 loading="lazy"
                                 alt=""
-                                src="./public/f7c334-6-2-3@2x.png"
+                                src="./public/f7c334-6-2@2x.png"
                               />
                             </div>
                             <div class="wrapper3">
@@ -263,7 +265,7 @@
                                 class="f7c334-6-24"
                                 loading="lazy"
                                 alt=""
-                                src="./public/f7c334-6-2-4@2x.png"
+                                src="./public/f7c334-6-2@2x.png"
                               />
                             </div>
                             <div class="frame-parent8">
@@ -302,7 +304,7 @@
                                 class="f7c334-6-25"
                                 loading="lazy"
                                 alt=""
-                                src="./public/f7c334-6-2-5@2x.png"
+                                src="./public/f7c334-6-2@2x.png"
                               />
                             </div>
                             <div class="wrapper6">
@@ -342,7 +344,7 @@
                               class="f7c334-6-26"
                               loading="lazy"
                               alt=""
-                              src="./public/f7c334-6-2-6@2x.png"
+                              src="./public/f7c334-6-2@2x.png"
                             />
                           </div>
                         </div>
@@ -385,7 +387,7 @@
                             <img
                               class="f7c334-6-27"
                               alt=""
-                              src="./public/f7c334-6-2-7@2x.png"
+                              src="./public/f7c334-6-2@2x.png"
                             />
                           </div>
                         </div>
@@ -415,7 +417,7 @@
                             <img
                               class="f7c334-6-28"
                               alt=""
-                              src="./public/f7c334-6-2-8@2x.png"
+                              src="./public/f7c334-6-2@2x.png"
                             />
                           </div>
                           <div class="frame-parent13">
@@ -454,7 +456,7 @@
                             <img
                               class="f7c334-6-29"
                               alt=""
-                              src="./public/f7c334-6-2-9@2x.png"
+                              src="./public/f7c334-6-2@2x.png"
                             />
                           </div>
                           <div class="frame-parent15">
@@ -491,7 +493,7 @@
                             <img
                               class="f7c334-6-210"
                               alt=""
-                              src="./public/f7c334-6-2-10@2x.png"
+                              src="./public/f7c334-6-2@2x.png"
                             />
                           </div>
                           <div class="wrapper13">
@@ -535,7 +537,7 @@
                               class="f7c334-6-211"
                               loading="lazy"
                               alt=""
-                              src="./public/f7c334-6-2-11@2x.png"
+                              src="./public/f7c334-6-2@2x.png"
                             />
                           </div>
                         </div>
@@ -564,7 +566,7 @@
                         <img
                           class="f7c334-6-212"
                           alt=""
-                          src="./public/f7c334-6-2-12@2x.png"
+                          src="./public/f7c334-6-2@2x.png"
                         />
 
                         <div class="parent5">
@@ -603,7 +605,7 @@
                       class="f7c334-6-213"
                       loading="lazy"
                       alt=""
-                      src="./public/f7c334-6-2-13@2x.png"
+                      src="./public/f7c334-6-2@2x.png"
                     />
                   </div>
                 </div>
@@ -621,7 +623,6 @@
                     alt=""
                     src="./public/rectangle-476-14@2x.png"
                   />
-
                   <div class="small-fries-porcin-de-papas-i-parent">
                     <div class="small-fries-porcin-container">
                       <p class="small-fries">
@@ -643,7 +644,7 @@
                           <img
                             class="f7c334-6-214"
                             alt=""
-                            src="./public/f7c334-6-2-14@2x.png"
+                            src="./public/f7c334-6-2@2x.png"
                           />
                         </div>
                       </div>
@@ -681,7 +682,7 @@
                     <img
                       class="f7c334-6-215"
                       alt=""
-                      src="./public/f7c334-6-2-15@2x.png"
+                      src="./public/f7c334-6-2@2x.png"
                     />
                   </div>
                 </div>
@@ -716,7 +717,7 @@
                           class="f7c334-6-216"
                           loading="lazy"
                           alt=""
-                          src="./public/f7c334-6-2-16@2x.png"
+                          src="./public/f7c334-6-2@2x.png"
                         />
                       </div>
                     </div>
@@ -755,7 +756,7 @@
                         <img
                           class="f7c334-6-217"
                           alt=""
-                          src="./public/f7c334-6-2-17@2x.png"
+                          src="./public/f7c334-6-2@2x.png"
                         />
                       </div>
                     </div>
@@ -798,7 +799,7 @@
                       class="f7c334-6-218"
                       loading="lazy"
                       alt=""
-                      src="./public/f7c334-6-2-18@2x.png"
+                      src="./public/f7c334-6-2@2x.png"
                     />
                   </div>
                 </div>
@@ -830,7 +831,7 @@
                       class="f7c334-6-219"
                       loading="lazy"
                       alt=""
-                      src="./public/f7c334-6-2-19@2x.png"
+                      src="./public/f7c334-6-2@2x.png"
                     />
                   </div>
                 </div>
@@ -853,7 +854,7 @@
                         class="f7c334-6-220"
                         loading="lazy"
                         alt=""
-                        src="./public/f7c334-6-2-20@2x.png"
+                        src="./public/f7c334-6-2@2x.png"
                       />
 
                       <div class="parent6">
@@ -862,7 +863,6 @@
                           <div class="parent7">
                             <div class="div42">+</div>
                             <img
-                              class="cart-plus-icon2"
                               alt=""
                               src="./public/cartplus-1.svg"
                             />
@@ -899,7 +899,7 @@
                     <img
                       class="f7c334-6-221"
                       alt=""
-                      src="./public/f7c334-6-2-21@2x.png"
+                      src="./public/f7c334-6-2@2x.png"
                     />
                   </div>
                 </div>
@@ -910,7 +910,7 @@
       </main>
       <footer class="desktop-2-child"></footer>
     </div>
-
+    
     <script>
       var rectangle = document.getElementById("rectangle");
       if (rectangle) {
