--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./index.css" />
+    <link rel="icon" type="image/svg+xml" href="/public/Logo fat burguer.jpeg.jpeg" />
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Open Sans:ital,wght@0,400;0,700;1,400&display=swap"
@@ -27,6 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
     />
   </head>
+  <title>Fat Burger</title>
   <body>
     <div class="desktop-1">
       <header class="encabezado">
@@ -70,7 +73,7 @@
           <img
             class="diseo-sin-ttulo-3-1"
             alt=""
-            src="./public/diseo-sin-ttulo-3-1@2x.png"
+            src="./public/hero-content@3x.png"
           />
 
           <img
@@ -83,13 +86,13 @@
           <img
             class="image-placeholder-icon1"
             alt=""
-            src="./public/image-placeholder@2x.png"
+            src="./public/ellipse-3@2x.png"
           />
 
           <img
             class="image-placeholder-icon2"
             alt=""
-            src="./public/image-placeholder@2x.png"
+            src="./public/2-56@2x.png"
           />
 
           <img
@@ -132,7 +135,7 @@
               <img
                 class="mask-group-icon1"
                 alt=""
-                src="./public/mask-group-1.svg"
+                src="./public/mask-group.svg"
               />
             </div>
             <h2 class="ingredientes-frescos-y">
@@ -148,7 +151,7 @@
                     class="mask-group-icon2"
                     loading="lazy"
                     alt=""
-                    src="./public/mask-group-2.svg"
+                    src="./public/mask-group.svg"
                   />
                 </div>
                 <h2 class="servicio-excepcional">
@@ -167,7 +170,7 @@
         <img
           class="about-divider-icon"
           alt=""
-          src="./public/about-divider@2x.png"
+          src="./public/2-57@2x.png"
         />
 
         <div class="about-content">
@@ -236,7 +239,7 @@
         <img
           class="info-divider-icon"
           alt=""
-          src="./public/info-divider@2x.png"
+          src="./public/header-background@2x.png"
         />
 
         <div class="info-content">
@@ -256,7 +259,7 @@
         <img
           class="anotacin-2024-08-24-195739"
           alt=""
-          src="./public/anotacin-20240824-195739@2x.png"
+          src="./public/anotacin-20240824-195739@3x.png"
         />
       </section>
       <section class="menu">
@@ -392,7 +395,7 @@
                                 class="f7c334-4-11"
                                 loading="lazy"
                                 alt=""
-                                src="./public/f7c334-4-1-1@2x.png"
+                                src="./public/f7c334-4-1@2x.png"
                               />
                             </div>
                           </div>
@@ -444,7 +447,7 @@
                               class="f7c334-4-12"
                               loading="lazy"
                               alt=""
-                              src="./public/f7c334-4-1-2@2x.png"
+                              src="./public/f7c334-4-1@2x.png"
                             />
                           </div>
                         </div>
@@ -488,7 +491,7 @@
           <img
             class="rating-background-icon"
             alt=""
-            src="./public/rating-background@2x.png"
+            src="./public/header-background@2x.png"
           />
 
           <img
@@ -502,32 +505,32 @@
             class="stars-icon1"
             loading="lazy"
             alt=""
-            src="./public/star-2.svg"
+            src="./public/star-1.svg"
           />
 
           <img
             class="stars-icon2"
             loading="lazy"
             alt=""
-            src="./public/star-3.svg"
+            src="./public/star-1.svg"
           />
 
           <img
             class="stars-icon3"
             loading="lazy"
             alt=""
-            src="./public/star-4.svg"
+            src="./public/star-1.svg"
           />
 
           <img
             class="stars-icon4"
             loading="lazy"
             alt=""
-            src="./public/star-5.svg"
+            src="./public/star-1.svg"
           />
         </div>
       </section>
-      <footer class="contacto" data-scroll-to="contacto">
+      <footer class="contacto" id="contacto">
         <div class="icons8-instagram-2"></div>
         <div class="content-container">
           <div class="content-wrapper">
@@ -625,7 +628,8 @@
         />
       </footer>
     </div>
-
+    <a href="https://wa.me/c/5491166783269" target="_blank"><img src="./public/WhatsApp_icon.png" class="whatsapp"></img></a>
+    <a href="https://www.instagram.com/fat.burger.bsas/" target="_blank"><img src="./public/Instagram_icon.png" class="ig"></img></a>
     <script>
       var groupContainer = document.getElementById("groupContainer");
       if (groupContainer) {
@@ -661,5 +665,7 @@
         });
       }
       </script>
+
+<script src="./script.js"></script>
   </body>
 </html>
